# entropy

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  PROGRESS.md  README.md
.cache/clangd/index/: aggregation.cpp.7061ADDC7855A78F.idx  aggregation.hpp.EBBF04DE84CE1A71.idx  ast.cpp.5FDC4DFF4525341F.idx  ast.hpp.A960268F1892382D.idx  b_plus_tree.cpp.B317FE35BA4EB33C.idx  b_plus_tree.hpp.8EC13DEE0AE9C777.idx  b_plus_tree_page.hpp.F7F1F8C7F822E5A7.idx  b_plus_tree_page_test.cpp.DB592B89FA1FA2A8.idx  b_plus_tree_test.cpp.181A16E3DE2597E0.idx  basic_usage.cpp.EE670192FF76A483.idx  binder.cpp.F408288920CE601A.idx  binder.hpp.8E4C2F8D1E8711A0.idx  buffer_pool.cpp.5B25EAEF88A2F619.idx  buffer_pool.hpp.7A3375F571B59EC2.idx  buffer_pool_test.cpp.E1A9C4AD3EBEF403.idx  catalog.cpp.26231DC6A4670FBE.idx  catalog.hpp.16F7D36EADDE5665.idx  catalog_test.cpp.E819C35CEBDB2C0C.idx  column.cpp.6EC3905841CC6564.idx  column.hpp.60CB5F0933F7C769.idx  config.cpp.2E8A46389095F866.idx  config.hpp.EEAC20C27007619D.idx  cost_model.cpp.1F78CE6C932BAF6F.idx  cost_model.hpp.FF9B46AEFA57CBD5.idx  database.cpp.F8C71C18F614524E.idx  database.hpp.46DFC5141FBCEC5A.idx  database_test.cpp.E90C973363D958F6.idx  delete_executor.cpp.77642DB2FE266B82.idx  delete_executor.hpp.564E55ECF2E2F099.idx  disk_manager.cpp.1AC2D3B230BA57CC.idx  disk_manager.hpp.0BFE085F9DE9BE08.idx  disk_manager_test.cpp.14D7CD545FF4066B.idx  entropy.hpp.2A8CDF3ACFAA161B.idx  executor.cpp.6E5B79A085E70D8B.idx  executor.hpp.AB6E18E3DEF2CC79.idx  executor_test.cpp.B30498340D379394.idx  expression.cpp.15961A24CF4F8AF9.idx  expression.hpp.52DE72255A7F755C.idx  filter.cpp.625C9BCFB924C39F.idx  filter.hpp.A40921E04B038FD1.idx  (+81 more)
.config/: tsan-suppressions.txt
.github/workflows/: ci.yml  release.yml
benchmarks/: CMakeLists.txt  bench_utils.hpp  insert_benchmark.cpp  query_benchmark.cpp  sqlite_utils.hpp
cmake/: CompilerWarnings.cmake  Dependencies.cmake  entropyConfig.cmake.in
docs/: benchmarks.md
docs/benchmarks/: bench_summary.csv
docs/benchmarks/runs/: bench-20251226-211444.json  bench-20251226-214051.json
docs/report/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/report/scripts/: export-pdf.mjs
docs/report/src/: App.tsx  main.tsx  theme.ts
docs/report/src/components/: Blocks.tsx  Divider.tsx  Page.tsx
docs/report/src/figures/: AbortResurrection.tsx  BenchChart.tsx  LatchCrabbing.tsx  MvccTimeline.tsx  PageLayout.tsx  RecoveryPhases.tsx  SeedStreams.tsx  common.tsx  (+3 more)
examples/: CMakeLists.txt  basic_usage.cpp
include/entropy/: database.hpp  entropy.hpp  result.hpp  status.hpp  version.hpp.in
packaging/consumer-smoke/: CMakeLists.txt  main.cpp
scripts/bench/: run.ps1  run.sh  summarize.py
src/: CMakeLists.txt
src/api/: database.cpp  result.cpp  shell.cpp  shell_utils.cpp  shell_utils.hpp
src/catalog/: catalog.cpp  catalog.hpp  catalog_manifest.cpp  catalog_manifest.hpp  column.cpp  column.hpp  schema.cpp  schema.hpp
src/common/: config.cpp  config.hpp  logger.cpp  logger.hpp  macros.hpp  status.cpp  status.hpp  types.hpp
src/execution/: aggregation.cpp  aggregation.hpp  delete_executor.cpp  delete_executor.hpp  executor.cpp  executor.hpp  executor_context.hpp  filter.cpp  filter.hpp  hash_join.cpp  hash_join.hpp  index_scan_executor.cpp  index_scan_executor.hpp  insert_executor.cpp  insert_executor.hpp  limit_executor.cpp  limit_executor.hpp  nested_loop_join.cpp  nested_loop_join.hpp  projection.cpp  projection.hpp  seq_scan_executor.cpp  seq_scan_executor.hpp  sort_executor.cpp  sort_executor.hpp  update_executor.cpp  update_executor.hpp
src/optimizer/: cost_model.cpp  cost_model.hpp  index_selector.cpp  index_selector.hpp  optimizer.cpp  optimizer.hpp  plan_node.cpp  plan_node.hpp  statistics.cpp  statistics.hpp
src/parser/: ast.cpp  ast.hpp  binder.cpp  binder.hpp  expression.cpp  expression.hpp  parser.cpp  parser.hpp  statement.hpp  token.cpp  token.hpp
src/sim/: fault.hpp  schedule.cpp  schedule.hpp  sim_disk_manager.cpp  sim_disk_manager.hpp  sim_log_store.cpp  sim_log_store.hpp  workload.cpp  workload.hpp
src/storage/: b_plus_tree.cpp  b_plus_tree.hpp  b_plus_tree_page.hpp  buffer_pool.cpp  buffer_pool.hpp  disk_manager.cpp  disk_manager.hpp  hash_index.cpp  hash_index.hpp  lru_replacer.cpp  lru_replacer.hpp  page.cpp  page.hpp  page_compression.hpp  table_heap.cpp  table_heap.hpp  table_page.cpp  table_page.hpp  tuple.cpp  tuple.hpp
src/transaction/: lock_manager.cpp  lock_manager.hpp  log_record.cpp  log_record.hpp  mvcc.cpp  mvcc.hpp  recovery.cpp  recovery.hpp  transaction.cpp  transaction.hpp  transaction_manager.cpp  transaction_manager.hpp  version_store.cpp  version_store.hpp  wal.cpp  wal.hpp
tests/: CMakeLists.txt
tests/api/: shell_split_test.cpp
tests/catalog/: catalog_persistence_test.cpp  catalog_test.cpp
tests/common/: test_utils.hpp
tests/execution/: executor_test.cpp
tests/integration/: api_safety_test.cpp  database_test.cpp  transaction_api_test.cpp
tests/optimizer/: optimizer_test.cpp
tests/parser/: binder_type_check_test.cpp  parser_test.cpp
tests/sim/: sim_test.cpp
tests/storage/: b_plus_tree_page_test.cpp  b_plus_tree_test.cpp  buffer_pool_test.cpp  disk_manager_test.cpp  hash_index_test.cpp  lru_replacer_test.cpp  page_compression_test.cpp  page_test.cpp  table_heap_test.cpp  table_page_test.cpp  tuple_test.cpp
tests/transaction/: lock_manager_test.cpp  recovery_crash_test.cpp  transaction_test.cpp  txn_lock_integration_test.cpp  version_store_test.cpp
tools/: CMakeLists.txt
tools/entropy-sim/: main.cpp
tui/: CMakeLists.txt  app_shell.cpp  app_shell.hpp  boot_screen.cpp  boot_screen.hpp  dashboard_screen.cpp  dashboard_screen.hpp  data_loader.cpp  data_loader.hpp  main.cpp  primitives.cpp  primitives.hpp  query_console_screen.cpp  query_console_screen.hpp  theme.hpp
tui/captures/: boot.ans  capture-anim.sh  capture.sh  console.ans  dashboard.ans
tui/data/: demo.jsonl  durable_survives_intact.jsonl  torn_page_write.jsonl  torn_wal_tail.jsonl  undo_durable_loser.jsonl
(+11 files in other folders)
